Native SHA1 implementation #34 (supporting JDK 6)